# serializer version: 1
# name: test_smart_blinds_states[tests/fixtures/smart-blinds-closed.yaml]
  tuple(
    'closed',
    ReadOnlyDict({
      'current_position': 0,
      'device_class': 'blind',
      'friendly_name': 'Left Shade',
      'supported_features': <CoverEntityFeature.OPEN|CLOSE|SET_POSITION: 7>,
    }),
  )
# ---
# name: test_smart_blinds_states[tests/fixtures/smart-blinds-open.yaml]
  tuple(
    'open',
    ReadOnlyDict({
      'current_position': 100,
      'device_class': 'blind',
      'friendly_name': 'Left Shade',
      'supported_features': <CoverEntityFeature.OPEN|CLOSE|SET_POSITION: 7>,
    }),
  )
# ---
